# Chatter

./: Cargo.toml
chatter-client/: Cargo.toml
chatter-client/src/: chatter_client.rs  lib.rs  main.rs
chatter-server/: Cargo.toml
chatter-server/src/: chatter_server.rs  lib.rs  main.rs
chatter-types/: Cargo.toml
chatter-types/src/: lib.rs
example_chatter_service/: Cargo.toml
example_chatter_service/src/: main.rs
example_service_that_communicates_with_chatter/: Cargo.toml
example_service_that_communicates_with_chatter/src/: main.rs
src/: main.rs
transport/: Cargo.toml
transport/src/: lib.rs
