[package]
name = "example_service"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chatter-types = {path="../chatter-types"}
chatter-server = {path="../chatter-server"}
chatter-client = {path="../chatter-client"}
transport = {path="../transport"}
