[package]
name = "transport"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chatter-types = {path="../chatter-types"}
serde = "1.0.195"
serde_derive = "1.0.195"
serde_json = "1.0.111"
